--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: Main workflow
 on: push
+env:
+  docker_username: ${{github.actor}}
+  docker_password: ${{secrets.GITHUB_TOCKEN}}
+  GIT_COMMIT: ${{github.sha}}
 jobs:
   Linting: 
     runs-on: ubuntu-latest
@@ -15,6 +19,7 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DISABLE_ERRORS: true
   Build:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
@@ -30,3 +35,20 @@ jobs:
         with:
           name: code
           path: .
+  Docker-image: 
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions: 
+      packages: write
+    steps:
+    - name: Download code
+      uses: actions/download-artifact@v4
+      with: 
+        name: code
+        path: .
+    - name: ls
+      run: ls -la ci
+    - name: build docker
+      run: bash ci/build-docker.sh
+    - name: push docker
+      run: bash ci/push-docker.sh
