--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Main workflow
 on: push
 env:
   docker_username: presianandreichev
-  docker_password: ${{secrets.GITHUB_TOCKEN}}
+  docker_password: Pr7@$^*)
   GIT_COMMIT: ${{github.sha}}
 jobs:
   Linting: 
